5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4378/executions/1577_2896.log
== TEST (2019-03-21 18:50:33) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = Karina

# Impressao de saidas
print(Karina)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = Karina
NameError: name 'Karina' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:50:35) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = Karina

# Impressao de saidas
print(Karina)
-- EXECUTION TIME:
0.218534
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1577/2896/main.py", line 4, in <module>
    var = Karina
NameError: name 'Karina' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:50:35) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = Karina

# Impressao de saidas
print(Karina)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = Karina
NameError: name 'Karina' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:51:03) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Karina")

# Impressao de saidas
print(Karina)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(Karina)
NameError: name 'Karina' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:51:05) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Karina")

# Impressao de saidas
print(Karina)
-- EXECUTION TIME:
0.19424
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1577/2896/main.py", line 7, in <module>
    print(Karina)
NameError: name 'Karina' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:51:15) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Karina")

# Impressao de saidas
print("Karina")
-- OUTPUT:
Karina
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:51:17) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Karina")

# Impressao de saidas
print("Karina")
-- EXECUTION TIME:
0.200058
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
Karina
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
Karina
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:51:31) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Karina")

# Impressao de saidas
print("var")
-- OUTPUT:
var
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:51:33) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Karina")

# Impressao de saidas
print("var")
-- EXECUTION TIME:
0.203157
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
var
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
var
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:51:43) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Karina")

# Impressao de saidas
print(var)
-- OUTPUT:
Ada_Lovelace
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:51:44) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Karina")

# Impressao de saidas
print(var)
-- EXECUTION TIME:
0.226466
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
Ada_Lovelace
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
Teste
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
